Fixed startup flow on new board. Removed overflow when draggin exercises. Changed default workout name.

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -172,6 +172,7 @@ html, body {
 }
 
 .as-sortable-dragging{
+  overflow: hidden !important;
   padding: 0px !important;
   margin: 0px !important;
   margin-left: 0px !important;
